syntax = "proto3";

package ame.v1 ;

message TaskIdentifier {
  string name = 1;
}

message Task {
  string projectid = 1;
  string command = 2;
  optional string image = 3;
}

message Empty {

}

service AmeService {
  rpc GetTask(TaskIdentifier) returns (Task) {}
  rpc CreateTask(Task) returns (TaskIdentifier) {}
  rpc DeleteTask(TaskIdentifier) returns (Empty) {}
}
